--- a/.github/workflows/deploy-to-github.yml
+++ b/.github/workflows/deploy-to-github.yml
@@ -45,5 +45,7 @@ jobs:
       - name: Build Packages.
         run: sudo ng build --prod --base-href https://$GITHUB_ACTOR.github.io/angular-basics/
 
-      - name: Publish code
-        run: sudo ngh --no-silent --name $GITHUB_ACTOR --repo git@github.com:santhosh-ztech/angular-basics.git
+      - name: Publish code to Github Pages
+        uses: crazy-max/ghaction-github-pages@v2.0.1
+        with:
+          build_dir: dist 
