--- a/.github/workflows/deploy-to-github.yml
+++ b/.github/workflows/deploy-to-github.yml
@@ -50,4 +50,4 @@ jobs:
         with:
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ GITHUB_TOKEN }}   
+          GITHUB_TOKEN: $GITHUB_TOKEN   
